[package]
name = "mystiko_roller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
config = { version = "0.13.3" }
ethers-core  = { version = "2.0.4" }
ethers-contract  = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
ethers-signers = { version = "2.0.4"}
futures = { version = "0.3.28" }
lazy_static = { version = "1.4.0" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
dotenv = { version = "0.15.0" }
num-bigint = { version = "0.4.3" }
mystiko_protos = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9", default-features = false, features = ["mystiko-storage-v1"] }
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.15.2" }
tokio = { version = "1.26.0", features = ["time","full"] }

# mystiko
mystiko_abi = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_crypto = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "93fbd08" }
mystiko_ethers = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9", features = ["config"] }
mystiko_downloader = { git = "ssh://git@github.com/mystikonetwork/mystiko-backend.git", rev = "906cb0f" }
mystiko_fs = { git = "ssh://git@github.com/mystikonetwork/mystiko-backend.git", rev = "906cb0f" }
mystiko_server_utils = { git = "ssh://git@github.com/mystikonetwork/mystiko-backend.git", rev = "906cb0f" }
mystiko_types = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_storage = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_storage_sqlite = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_protocol = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "93fbd08" }
mystiko_indexer_client = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_utils = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }
mystiko_storage_macros = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "ff303f9" }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
ethers-contract = { version = "2.0.4"}
mockito = { version = "1.1.0" }
