[package]
name = "mystiko_roller_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
config = { version = "0.13.3" }
clap = { version = "4.2.1", features = ["derive"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
ethers-core = { version = "2.0.4" }
ethers-contract = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
futures = { version = "0.3.28" }
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
log = { version = "0.4.17" }
num-bigint = { version = "0.4.3" }
rusoto_sns = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.15.2" }
tokio = { version = "1.26.0", features = ["time", "full"] }

# mystiko
mystiko_abi = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "2b27cc4", features = ["fs"] }
mystiko_ethers = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7", features = ["config"] }
mystiko_protos = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7", default-features = false, features = ["mystiko-api-config-v1"] }
mystiko_scheduler = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7", features = ["signal", "status"] }
mystiko_sequencer_client = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7" }
mystiko_server_utils = { git = "ssh://git@github.com/mystikonetwork/mystiko-backend.git", rev = "18f8637" }
mystiko_utils = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7", features = ["config", "json"] }
mystiko_notification = { git = "ssh://git@github.com/mystikonetwork/mystiko-backend.git", rev = "18f8637", features = ["sns"] }


[dev-dependencies]
env_logger = { version = "0.10.0" }
ethers-core = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
mockall = { version = "0.11.4" }
serial_test = { version = "2.0.0" }
tonic = { version = "0.9.2", features = ["tls"] }
mystiko_grpc = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "353b1a7", default-features = false, features = ["fs", "server"] }
