[package]
name = "mystiko_roller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
config = { version = "0.13.3" }
clap = { version = "4.2.1", features = ["derive"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
ethers-core = { version = "2.0.4" }
ethers-contract = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
ethers-signers = { version = "2.0.4" }
futures = { version = "0.3.28" }
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
log = { version = "0.4.17" }
mime = { version = "0.3.17" }
num-bigint = { version = "0.4.3" }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.15.2" }
tokio = { version = "1.26.0", features = ["time", "full"] }
validator = { version = "0.16.0", features = ["derive"] }
crypto-bigint = { version = "=0.5.0" }

# mystiko
mystiko_abi = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073" }
mystiko_config = { git = "https://github.com/mystikonetwork/mystiko-static-config", rev = "a290629", features = ["fs"] }
mystiko_crypto = { git = "https://github.com/mystikonetwork/mystiko-protocol", rev = "2f9f410" }
mystiko_ethers = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073", features = ["config"] }
mystiko_downloader = { git = "https://github.com/mystikonetwork/mystiko-backend", rev = "d2d641c" }
mystiko_dataloader = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073" }
mystiko_fs = { git = "https://github.com/mystikonetwork/mystiko-backend", rev = "d2d641c" }
mystiko_scheduler = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073", features = ["signal", "status"] }
mystiko_status_server = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073" }
mystiko_server_utils = { git = "https://github.com/mystikonetwork/mystiko-backend", rev = "d2d641c" }
mystiko_storage = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073" }
mystiko_storage_sqlite = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073" }
mystiko_types = { git = "https://github.com/mystikonetwork/mystiko-static-config", rev = "a290629" }
mystiko_protos = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073", default-features = false, features = ["mystiko-storage-v1"] }
mystiko_protocol = { git = "https://github.com/mystikonetwork/mystiko-protocol", rev = "2f9f410" }
mystiko_utils = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073", features = ["config"] }
mystiko_storage_macros = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "4f46073" }

[dev-dependencies]
ethers-contract = { version = "2.0.4" }
mockall = { version = "0.11.4" }
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }

[profile.release]
debug = true